<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_text_view"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/add_new_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title_add_bottom_sheet"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginVertical="38dp"
        android:hint="@string/enter_your_task"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <EditText
        android:id="@+id/description_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="44dp"
        android:layout_marginVertical="26dp"
        android:gravity="top"
        android:hint="@string/enter_task_description"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/et_title_add_bottom_sheet" />

    <TextView
        android:id="@+id/select_date_label_text_view"
        style="@style/DateStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="28dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_date"
        app:layout_constraintEnd_toStartOf="@id/select_date_value_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

    <TextView
        android:id="@+id/select_date_value_text_view"
        style="@style/DateStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/select_date_label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select_date_label_text_view"
        app:layout_constraintTop_toTopOf="@id/select_date_label_text_view" />

    <TextView
        android:id="@+id/select_time_label_text_view"
        style="@style/DateStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="8dp"
        android:text="@string/select_time"
        app:layout_constraintEnd_toStartOf="@id/select_time_value_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_date_label_text_view" />

    <TextView
        android:id="@+id/select_time_value_text_view"
        style="@style/DateStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/select_time_label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select_time_label_text_view"
        app:layout_constraintTop_toTopOf="@id/select_time_label_text_view" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_time_label_text_view" />
</androidx.constraintlayout.widget.ConstraintLayout>